--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
@@ -23,6 +24,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.33",
     "prettier": "^3.0.3",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.10"
   }
