--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
+    "vue-lite-youtube-embed": "^1.2.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
