--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "swiper": "^11.0.5",
     "vue": "^3.3.11",
     "vue-lite-youtube-embed": "^1.2.1",
